# magnum-plugins

doc/: namespaces.dox
src/: CMakeLists.txt
src/StanfordImporter/: CMakeLists.txt  StanfordImporter.conf  StanfordImporter.cpp  StanfordImporter.h  configure.h.cmake
src/StanfordImporter/cz/mosra/magnum/StanfordImporter/: StanfordImporter.java  StanfordImporterTest.java
